# CodeCompass

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_SETUP.md  Dockerfile  LICENSE  ONBOARDING.md  PITCH.md  POSITIONING.md  PROGRESS.md  README.md  __init__.py  claude.md  config.py  docker-compose.yml  install.sh  main.py  mcp_server.py  pi_setup.py  plan.md  pyproject.toml  requirements.txt
.claude/: settings.json
.codecompass/: graph.json  learnings.md  memory.md  overview.md
.codex/: hooks.json
.github/: CODEOWNERS
.pi/: APPEND_SYSTEM.md
agents/: CODE.md  CONCEPT.md  HYBRID.md  INGEST.md  ROUTING.md
benchmarks/: BENCHMARK_BASELINE.md  BENCHMARK_CODECOMPASS.md
docs/: NEXT_STEPS.md  benchmark-results.md  generate_architecture_pdf.py  node-demerge.md
eval/: token_eval.py
graph/: cli.py  code_graph_client.py  code_queries.py  code_query_cli.py  db_router.py  fetch_cli.py  ingest_cli.py  mcp_server.py  nav_agent.py  neo4j_client.py  query_cli.py  remember_batch_cli.py  remember_cli.py  setup.py  vector_store.py
ingestion/: agent_writes.py  bridge_detector.py  chunker.py  code_normalizer.py  code_parser.py  description_enricher.py  enricher.py  entity_resolver.py  file_watcher.py  graph_writer.py  hierarchy_builder.py  ignore.py  reader_agent.py  source_context.py
memory/: components.md  decisions.md  learnings.example.md  learnings.md  project.md  session_log.md
models/: code_types.py  types.py
opencode/: config.template.json  instructions.md  package.json
pi-package/: README.md  package.json
query/: agent.py  agentic_agent.py  answer_agent.py  graph_context_agent.py  navigator_agent.py  relevance_filter.py  seed_finder.py
tests/: test_init.py  (+21 more)
(+24 files in other folders)
